--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "pg": "^8.13.0",
+    "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -26,8 +27,12 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   },
   "babel": {
-    "presets": ["react-app"],
-    "plugins": ["@babel/plugin-proposal-private-property-in-object"]
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-private-property-in-object"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
