--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apexcharts": "^3.50.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "firebase": "^10.13.1",
