--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.11.3",
     "pg": "^8.13.0",
     "primereact": "^10.8.4",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
