--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/datastore": "^9.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +13,8 @@
     "chart.js": "^4.4.6",
     "cors": "^2.8.5",
     "express": "^4.21.0",
-    "firebase": "^10.13.1",
+    "firebase": "^11.0.1",
+    "firebase-admin": "^12.7.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "pg": "^8.13.0",
