Actualización: Modelos, Rutas y Configuración

--- a/back/.env
+++ b/back/.env
@@ -1,6 +1,5 @@
 DB_NAME=equipo1_ecommerce
 DB_USER=root
-DB_PASSWORD=pass
-DB_HOST=host
-DB_PORT=3306
-JWT_SECRET=pass
+DB_PASS=pass
+DB_HOST=localhost
+PORT=3001
