--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@google-cloud/datastore": "^9.2.0",
+    "@google-cloud/datastore": "^9.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.50.0",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "cors": "^2.8.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.7.0",
     "mysql": "^2.18.1",
